--- a/src/skills/skill/Skill.module.css
+++ b/src/skills/skill/Skill.module.css
@@ -13,8 +13,9 @@
   width: 60px;
 }
 .title {
-  margin: 0;
+  background-color: #dedede;
 }
 .description {
   text-align: center;
+  background-color: #dedede;
 }
