--- a/src/hireme/HireMe.module.css
+++ b/src/hireme/HireMe.module.css
@@ -1,6 +1,6 @@
 .hireMe {
-  min-height: 25vh;
-  background-color: #d6e3b6;
+  min-height: 30vh;
+  background-color: #ebefda;
 
   display: flex;
   align-items: center;
@@ -11,7 +11,10 @@
   flex-direction: column;
 }
 .title {
+  margin-top: 0;
+  margin-bottom: 40px;
   background-color: #dedede;
+  text-align: center;
 }
 .hireMeButton {
   width: 150px;
@@ -22,4 +25,9 @@
   cursor: pointer;
   color: #fff;
   font-size: 20px;
+}
+@media (max-width: 560px) {
+  .hireMe {
+    padding: 70px 0;
+  }
 }
