--- a/src/main/Main.module.css
+++ b/src/main/Main.module.css
@@ -5,21 +5,31 @@
   display: flex;
   align-items: center;
 }
-.mainBlock {
+.mainContainer {
+  display: flex;
   justify-content: space-around;
 }
 .text {
-  width: 300px;
+  max-width: 300px;
   background-color: #c4c4c4;
 }
 .photo {
-  height: 320px;
-  width: 240px;
+  max-width: 400px;
   background-color: #c4c4c4;
 
   display: flex;
   align-items: center;
 }
 .photo img {
-  width: 240px;
+  width: 100%;
+}
+@media (max-width: 875px) {
+  .mainContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .photo {
+    margin-top: 20px;
+  }
 }
