--- a/src/contacts/Contacts.module.css
+++ b/src/contacts/Contacts.module.css
@@ -17,10 +17,9 @@
 .contactsForm {
   display: flex;
   flex-direction: column;
-  /*justify-content: center;*/
 }
 .contactsForm input {
-  margin: 5px;
+  margin: 5px 0;
   padding: 3px;
 
   width: 400px;
@@ -33,7 +32,7 @@
   color: #4d4d4d;
 }
 .contactsForm textarea {
-  margin: 5px;
+  margin: 5px 0;
   padding: 3px;
   resize: none;
   overflow: auto;
